tools/MapleContentDescriptionNormalizer/lib/DescriptionPatchParser.java
// Generated from rules/DescriptionPatchParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DescriptionPatchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORD_SUCCESS=1, KEYWORD_LEVEL=2, KEYWORD_JOB=3, KEYWORD_CONDITION=4, 
		KEYWORD_CLASS=5, KEYWORD_WHEN=6, KEYWORD_GIVES=7, KEYWORD_IMPROVES=8, 
		KEYWORD_INCREASES=9, KEYWORD_RECOVER=10, KEYWORD_RESTORES=11, KEYWORD_FULLY=12, 
		KEYWORD_CAN=13, KEYWORD_SPEED=14, KEYWORD_MESO=15, KEYWORD_ACCURACY=16, 
		KEYWORD_AVOIDABILITY=17, KEYWORD_EVASION=18, KEYWORD_PROTECTION=19, KEYWORD_DOUBLE=20, 
		KEYWORD_ITEM=21, KEYWORD_JUMP=22, KEYWORD_ATTACK=23, KEYWORD_DEFENSE=24, 
		KEYWORD_WEAPON=25, KEYWORD_MAGIC=26, KEYWORD_DEF=27, KEYWORD_IF=28, KEYWORD_THE=29, 
		NUMBER=30, CODE_C=31, CODE=32, SIGN=33, MARK=34, WS=35, TARGET_BACKSLASH=36, 
		TARGET_R=37, TARGET_N=38, TARGET_C=39, TARGET_PLUS=40, TARGET_MINUS=41, 
		ANY_CHARACTER=42;
	public static final int
		RULE_dotSpec = 0, RULE_anyKeywordSpec = 1, RULE_textSpec = 2, RULE_expectedCarriageReturnSpec = 3, 
		RULE_expectedLineForwardSpec = 4, RULE_expectedLineBreakSpec = 5, RULE_whitespaceBeforeKeywordSpec = 6, 
		RULE_whitespaceOrLineBreakSpec = 7, RULE_codeSpec = 8, RULE_lineBreakMaybeCodeSpec = 9, 
		RULE_potentialConflictSpec = 10, RULE_signMaybeWhitespaceSpec = 11, RULE_signConflictSpec = 12, 
		RULE_whitespaceSpec = 13, RULE_spacedDotSpec = 14, RULE_moreConflictSpec = 15, 
		RULE_ignoreSpec = 16, RULE_mainSpec = 17, RULE_compilationUnit = 18;
	public static final String[] ruleNames = {
		"dotSpec", "anyKeywordSpec", "textSpec", "expectedCarriageReturnSpec", 
		"expectedLineForwardSpec", "expectedLineBreakSpec", "whitespaceBeforeKeywordSpec", 
		"whitespaceOrLineBreakSpec", "codeSpec", "lineBreakMaybeCodeSpec", "potentialConflictSpec", 
		"signMaybeWhitespaceSpec", "signConflictSpec", "whitespaceSpec", "spacedDotSpec", 
		"moreConflictSpec", "ignoreSpec", "mainSpec", "compilationUnit"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Success'", "'Level'", "'Job'", "'Condition'", "'Class'", "'When'", 
		"'Gives'", "'Improves'", "'Increases'", "'Recover'", "'Restores'", "'Fully'", 
		"'Can'", "'Speed'", "'Meso'", "'Accuracy'", "'Avoidability'", "'Evasion'", 
		"'Protection'", "'Double'", "'Item'", "'Jump'", "'Attack'", "'Defense'", 
		"'Weapon'", "'Magic'", "'Def'", "'If'", "'The'", null, "'#c'", "'#'", 
		null, null, null, "'\\'", "'r'", "'n'", "'c'", "'+'", "'-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KEYWORD_SUCCESS", "KEYWORD_LEVEL", "KEYWORD_JOB", "KEYWORD_CONDITION", 
		"KEYWORD_CLASS", "KEYWORD_WHEN", "KEYWORD_GIVES", "KEYWORD_IMPROVES", 
		"KEYWORD_INCREASES", "KEYWORD_RECOVER", "KEYWORD_RESTORES", "KEYWORD_FULLY", 
		"KEYWORD_CAN", "KEYWORD_SPEED", "KEYWORD_MESO", "KEYWORD_ACCURACY", "KEYWORD_AVOIDABILITY", 
		"KEYWORD_EVASION", "KEYWORD_PROTECTION", "KEYWORD_DOUBLE", "KEYWORD_ITEM", 
		"KEYWORD_JUMP", "KEYWORD_ATTACK", "KEYWORD_DEFENSE", "KEYWORD_WEAPON", 
		"KEYWORD_MAGIC", "KEYWORD_DEF", "KEYWORD_IF", "KEYWORD_THE", "NUMBER", 
		"CODE_C", "CODE", "SIGN", "MARK", "WS", "TARGET_BACKSLASH", "TARGET_R", 
		"TARGET_N", "TARGET_C", "TARGET_PLUS", "TARGET_MINUS", "ANY_CHARACTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DescriptionPatchParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DescriptionPatchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DotSpecContext extends ParserRuleContext {
		public TerminalNode SIGN() { return getToken(DescriptionPatchParser.SIGN, 0); }
		public TerminalNode MARK() { return getToken(DescriptionPatchParser.MARK, 0); }
		public DotSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dotSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterDotSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitDotSpec(this);
		}
	}

	public final DotSpecContext dotSpec() throws RecognitionException {
		DotSpecContext _localctx = new DotSpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dotSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_la = _input.LA(1);
			if ( !(_la==SIGN || _la==MARK) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyKeywordSpecContext extends ParserRuleContext {
		public TerminalNode KEYWORD_SUCCESS() { return getToken(DescriptionPatchParser.KEYWORD_SUCCESS, 0); }
		public TerminalNode KEYWORD_LEVEL() { return getToken(DescriptionPatchParser.KEYWORD_LEVEL, 0); }
		public TerminalNode KEYWORD_JOB() { return getToken(DescriptionPatchParser.KEYWORD_JOB, 0); }
		public TerminalNode KEYWORD_CONDITION() { return getToken(DescriptionPatchParser.KEYWORD_CONDITION, 0); }
		public TerminalNode KEYWORD_CLASS() { return getToken(DescriptionPatchParser.KEYWORD_CLASS, 0); }
		public TerminalNode KEYWORD_WHEN() { return getToken(DescriptionPatchParser.KEYWORD_WHEN, 0); }
		public TerminalNode KEYWORD_GIVES() { return getToken(DescriptionPatchParser.KEYWORD_GIVES, 0); }
		public TerminalNode KEYWORD_IMPROVES() { return getToken(DescriptionPatchParser.KEYWORD_IMPROVES, 0); }
		public TerminalNode KEYWORD_INCREASES() { return getToken(DescriptionPatchParser.KEYWORD_INCREASES, 0); }
		public TerminalNode KEYWORD_RECOVER() { return getToken(DescriptionPatchParser.KEYWORD_RECOVER, 0); }
		public TerminalNode KEYWORD_RESTORES() { return getToken(DescriptionPatchParser.KEYWORD_RESTORES, 0); }
		public TerminalNode KEYWORD_FULLY() { return getToken(DescriptionPatchParser.KEYWORD_FULLY, 0); }
		public TerminalNode KEYWORD_CAN() { return getToken(DescriptionPatchParser.KEYWORD_CAN, 0); }
		public TerminalNode KEYWORD_SPEED() { return getToken(DescriptionPatchParser.KEYWORD_SPEED, 0); }
		public TerminalNode KEYWORD_MESO() { return getToken(DescriptionPatchParser.KEYWORD_MESO, 0); }
		public TerminalNode KEYWORD_ACCURACY() { return getToken(DescriptionPatchParser.KEYWORD_ACCURACY, 0); }
		public TerminalNode KEYWORD_AVOIDABILITY() { return getToken(DescriptionPatchParser.KEYWORD_AVOIDABILITY, 0); }
		public TerminalNode KEYWORD_EVASION() { return getToken(DescriptionPatchParser.KEYWORD_EVASION, 0); }
		public TerminalNode KEYWORD_PROTECTION() { return getToken(DescriptionPatchParser.KEYWORD_PROTECTION, 0); }
		public TerminalNode KEYWORD_DOUBLE() { return getToken(DescriptionPatchParser.KEYWORD_DOUBLE, 0); }
		public TerminalNode KEYWORD_ITEM() { return getToken(DescriptionPatchParser.KEYWORD_ITEM, 0); }
		public TerminalNode KEYWORD_JUMP() { return getToken(DescriptionPatchParser.KEYWORD_JUMP, 0); }
		public TerminalNode KEYWORD_ATTACK() { return getToken(DescriptionPatchParser.KEYWORD_ATTACK, 0); }
		public TerminalNode KEYWORD_DEFENSE() { return getToken(DescriptionPatchParser.KEYWORD_DEFENSE, 0); }
		public TerminalNode KEYWORD_WEAPON() { return getToken(DescriptionPatchParser.KEYWORD_WEAPON, 0); }
		public TerminalNode KEYWORD_MAGIC() { return getToken(DescriptionPatchParser.KEYWORD_MAGIC, 0); }
		public TerminalNode KEYWORD_DEF() { return getToken(DescriptionPatchParser.KEYWORD_DEF, 0); }
		public TerminalNode KEYWORD_IF() { return getToken(DescriptionPatchParser.KEYWORD_IF, 0); }
		public TerminalNode KEYWORD_THE() { return getToken(DescriptionPatchParser.KEYWORD_THE, 0); }
		public TerminalNode NUMBER() { return getToken(DescriptionPatchParser.NUMBER, 0); }
		public TerminalNode CODE_C() { return getToken(DescriptionPatchParser.CODE_C, 0); }
		public AnyKeywordSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyKeywordSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterAnyKeywordSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitAnyKeywordSpec(this);
		}
	}

	public final AnyKeywordSpecContext anyKeywordSpec() throws RecognitionException {
		AnyKeywordSpecContext _localctx = new AnyKeywordSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anyKeywordSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_SUCCESS) | (1L << KEYWORD_LEVEL) | (1L << KEYWORD_JOB) | (1L << KEYWORD_CONDITION) | (1L << KEYWORD_CLASS) | (1L << KEYWORD_WHEN) | (1L << KEYWORD_GIVES) | (1L << KEYWORD_IMPROVES) | (1L << KEYWORD_INCREASES) | (1L << KEYWORD_RECOVER) | (1L << KEYWORD_RESTORES) | (1L << KEYWORD_FULLY) | (1L << KEYWORD_CAN) | (1L << KEYWORD_SPEED) | (1L << KEYWORD_MESO) | (1L << KEYWORD_ACCURACY) | (1L << KEYWORD_AVOIDABILITY) | (1L << KEYWORD_EVASION) | (1L << KEYWORD_PROTECTION) | (1L << KEYWORD_DOUBLE) | (1L << KEYWORD_ITEM) | (1L << KEYWORD_JUMP) | (1L << KEYWORD_ATTACK) | (1L << KEYWORD_DEFENSE) | (1L << KEYWORD_WEAPON) | (1L << KEYWORD_MAGIC) | (1L << KEYWORD_DEF) | (1L << KEYWORD_IF) | (1L << KEYWORD_THE) | (1L << NUMBER) | (1L << CODE_C))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextSpecContext extends ParserRuleContext {
		public AnyKeywordSpecContext anyKeywordSpec() {
			return getRuleContext(AnyKeywordSpecContext.class,0);
		}
		public TerminalNode ANY_CHARACTER() { return getToken(DescriptionPatchParser.ANY_CHARACTER, 0); }
		public TerminalNode TARGET_R() { return getToken(DescriptionPatchParser.TARGET_R, 0); }
		public TerminalNode TARGET_N() { return getToken(DescriptionPatchParser.TARGET_N, 0); }
		public TerminalNode TARGET_C() { return getToken(DescriptionPatchParser.TARGET_C, 0); }
		public TextSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterTextSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitTextSpec(this);
		}
	}

	public final TextSpecContext textSpec() throws RecognitionException {
		TextSpecContext _localctx = new TextSpecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_textSpec);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD_SUCCESS:
			case KEYWORD_LEVEL:
			case KEYWORD_JOB:
			case KEYWORD_CONDITION:
			case KEYWORD_CLASS:
			case KEYWORD_WHEN:
			case KEYWORD_GIVES:
			case KEYWORD_IMPROVES:
			case KEYWORD_INCREASES:
			case KEYWORD_RECOVER:
			case KEYWORD_RESTORES:
			case KEYWORD_FULLY:
			case KEYWORD_CAN:
			case KEYWORD_SPEED:
			case KEYWORD_MESO:
			case KEYWORD_ACCURACY:
			case KEYWORD_AVOIDABILITY:
			case KEYWORD_EVASION:
			case KEYWORD_PROTECTION:
			case KEYWORD_DOUBLE:
			case KEYWORD_ITEM:
			case KEYWORD_JUMP:
			case KEYWORD_ATTACK:
			case KEYWORD_DEFENSE:
			case KEYWORD_WEAPON:
			case KEYWORD_MAGIC:
			case KEYWORD_DEF:
			case KEYWORD_IF:
			case KEYWORD_THE:
			case NUMBER:
			case CODE_C:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				anyKeywordSpec();
				}
				break;
			case ANY_CHARACTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(ANY_CHARACTER);
				}
				break;
			case TARGET_R:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				match(TARGET_R);
				}
				break;
			case TARGET_N:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				match(TARGET_N);
				}
				break;
			case TARGET_C:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				match(TARGET_C);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpectedCarriageReturnSpecContext extends ParserRuleContext {
		public TerminalNode TARGET_R() { return getToken(DescriptionPatchParser.TARGET_R, 0); }
		public TerminalNode TARGET_BACKSLASH() { return getToken(DescriptionPatchParser.TARGET_BACKSLASH, 0); }
		public ExpectedCarriageReturnSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expectedCarriageReturnSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterExpectedCarriageReturnSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitExpectedCarriageReturnSpec(this);
		}
	}

	public final ExpectedCarriageReturnSpecContext expectedCarriageReturnSpec() throws RecognitionException {
		ExpectedCarriageReturnSpecContext _localctx = new ExpectedCarriageReturnSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expectedCarriageReturnSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TARGET_BACKSLASH) {
				{
				setState(49);
				match(TARGET_BACKSLASH);
				}
			}

			setState(52);
			match(TARGET_R);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpectedLineForwardSpecContext extends ParserRuleContext {
		public TerminalNode TARGET_N() { return getToken(DescriptionPatchParser.TARGET_N, 0); }
		public TerminalNode TARGET_BACKSLASH() { return getToken(DescriptionPatchParser.TARGET_BACKSLASH, 0); }
		public ExpectedLineForwardSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expectedLineForwardSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterExpectedLineForwardSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitExpectedLineForwardSpec(this);
		}
	}

	public final ExpectedLineForwardSpecContext expectedLineForwardSpec() throws RecognitionException {
		ExpectedLineForwardSpecContext _localctx = new ExpectedLineForwardSpecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expectedLineForwardSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TARGET_BACKSLASH) {
				{
				setState(54);
				match(TARGET_BACKSLASH);
				}
			}

			setState(57);
			match(TARGET_N);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpectedLineBreakSpecContext extends ParserRuleContext {
		public ExpectedLineForwardSpecContext expectedLineForwardSpec() {
			return getRuleContext(ExpectedLineForwardSpecContext.class,0);
		}
		public ExpectedCarriageReturnSpecContext expectedCarriageReturnSpec() {
			return getRuleContext(ExpectedCarriageReturnSpecContext.class,0);
		}
		public ExpectedLineBreakSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expectedLineBreakSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterExpectedLineBreakSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitExpectedLineBreakSpec(this);
		}
	}

	public final ExpectedLineBreakSpecContext expectedLineBreakSpec() throws RecognitionException {
		ExpectedLineBreakSpecContext _localctx = new ExpectedLineBreakSpecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expectedLineBreakSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(59);
				expectedCarriageReturnSpec();
				}
				break;
			}
			setState(62);
			expectedLineForwardSpec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhitespaceBeforeKeywordSpecContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(DescriptionPatchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DescriptionPatchParser.WS, i);
		}
		public WhitespaceBeforeKeywordSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whitespaceBeforeKeywordSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterWhitespaceBeforeKeywordSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitWhitespaceBeforeKeywordSpec(this);
		}
	}

	public final WhitespaceBeforeKeywordSpecContext whitespaceBeforeKeywordSpec() throws RecognitionException {
		WhitespaceBeforeKeywordSpecContext _localctx = new WhitespaceBeforeKeywordSpecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whitespaceBeforeKeywordSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				match(WS);
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhitespaceOrLineBreakSpecContext extends ParserRuleContext {
		public ExpectedLineBreakSpecContext expectedLineBreakSpec() {
			return getRuleContext(ExpectedLineBreakSpecContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DescriptionPatchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DescriptionPatchParser.WS, i);
		}
		public WhitespaceOrLineBreakSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whitespaceOrLineBreakSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterWhitespaceOrLineBreakSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitWhitespaceOrLineBreakSpec(this);
		}
	}

	public final WhitespaceOrLineBreakSpecContext whitespaceOrLineBreakSpec() throws RecognitionException {
		WhitespaceOrLineBreakSpecContext _localctx = new WhitespaceOrLineBreakSpecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whitespaceOrLineBreakSpec);
		try {
			int _alt;
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TARGET_BACKSLASH:
			case TARGET_R:
			case TARGET_N:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				expectedLineBreakSpec();
				}
				break;
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(70);
						match(WS);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(73); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeSpecContext extends ParserRuleContext {
		public TerminalNode CODE_C() { return getToken(DescriptionPatchParser.CODE_C, 0); }
		public TerminalNode TARGET_C() { return getToken(DescriptionPatchParser.TARGET_C, 0); }
		public TerminalNode CODE() { return getToken(DescriptionPatchParser.CODE, 0); }
		public CodeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterCodeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitCodeSpec(this);
		}
	}

	public final CodeSpecContext codeSpec() throws RecognitionException {
		CodeSpecContext _localctx = new CodeSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_codeSpec);
		int _la;
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(CODE_C);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CODE) {
					{
					setState(78);
					match(CODE);
					}
				}

				setState(81);
				match(TARGET_C);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(CODE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineBreakMaybeCodeSpecContext extends ParserRuleContext {
		public ExpectedLineBreakSpecContext expectedLineBreakSpec() {
			return getRuleContext(ExpectedLineBreakSpecContext.class,0);
		}
		public CodeSpecContext codeSpec() {
			return getRuleContext(CodeSpecContext.class,0);
		}
		public LineBreakMaybeCodeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineBreakMaybeCodeSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).enterLineBreakMaybeCodeSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DescriptionPatchParserListener ) ((DescriptionPatchParserListener)listener).exitLineBreakMaybeCodeSpec(this);
		}
	}
